--- a/app/style/uploader.scss
+++ b/app/style/uploader.scss
@@ -1,3 +1,10 @@
 .uploader-container {
-	background-color: red;
+	width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    resize: both;
+    overflow: auto;
 }
