--- a/app/style/uploader.scss
+++ b/app/style/uploader.scss
@@ -8,3 +8,16 @@
     resize: both;
     overflow: auto;
 }
+
+.uploader {
+	color: grey;
+	h1 {
+		transition: all 0.4s;
+	}
+	&.active {
+		color: #2ecc71;
+		h1 {
+			opacity: 0.7;
+		}
+	}
+}
