imported canvas.scss

--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -1,5 +1,6 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import './style/uploader';
+@import './style/canvas';
 
 @font-face {
 	font-family: "Poppins";
