imported window-control.scss

--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -1,6 +1,7 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import './style/uploader';
 @import './style/canvas';
+@import "./style/window-controls";
 
 @font-face {
 	font-family: "Poppins";
