changed uploader background color

--- a/app/style/uploader.scss
+++ b/app/style/uploader.scss
@@ -1,5 +1,6 @@
 .uploader {
 	color: grey;
+	background-color: rgba(228, 228, 228, 0.11);
 	width: 100%;
     height: 100%;
     position: absolute;
