changed window control buttons color

--- a/app/style/window-controls.scss
+++ b/app/style/window-controls.scss
@@ -8,13 +8,13 @@
 }
 
 .window-controls li:nth-child(1) {
-	background-color: #e53935;
+	background-color: #fe5e59;
 }
 
 .window-controls li:nth-child(2) {
-	background-color: #43A047;
+	background-color: #fec42f;
 }
 
 .window-controls li:nth-child(3) {
-	background-color: #FBC02D;
+	background-color: #2bd648;
 }
