--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -1,4 +1,5 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+@import "~font-awesome/css/font-awesome.css";
 @import './style/uploader';
 @import './style/canvas';
 
