--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -2,6 +2,7 @@
 @import "~font-awesome/css/font-awesome.css";
 @import './style/uploader';
 @import './style/canvas';
+@import './style/actionBar';
 
 @font-face {
 	font-family: "Poppins";
