made button ActionBar button large

--- a/app/style/actionBar.scss
+++ b/app/style/actionBar.scss
@@ -11,6 +11,8 @@
 		    border-radius: 0px;
 		    border: none;
 		    background-color: transparent;
+		    font-size: 20px;
+		    padding: 6px 15px;
 		}
     }
 }
