--- a/app/style/actionBar.scss
+++ b/app/style/actionBar.scss
@@ -13,6 +13,12 @@
 		    background-color: transparent;
 		    font-size: 20px;
 		    padding: 6px 15px;
+		    &:focus {
+		    	outline: none;
+		    }
+		    &:active {
+		    	box-shadow: none;
+		    }
 		}
     }
 }
