imported titleBar scss

--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -3,6 +3,7 @@
 @import './style/uploader';
 @import './style/canvas';
 @import './style/actionBar';
+@import './style/titleBar';
 
 @font-face {
 	font-family: "Poppins";
