--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -4,6 +4,7 @@
 @import './style/canvas';
 @import './style/actionBar';
 @import './style/titleBar';
+@import './style/popup';
 
 @font-face {
 	font-family: "Poppins";
